Symmetry is being built up and the methods in other classes to support that.
Neighborhoods have been added.

--- a/RockGarden.csproj
+++ b/RockGarden.csproj
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="Garden.cs" />
     <Compile Include="Gravel.cs" />
+    <Compile Include="Neighborhood.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Resident.cs" />
     <Compile Include="Rock.cs" />
